# personal-website-geni

./: .dockerignore  .gitignore  Dockerfile  README.md  check.sh  compose.yaml  dev.docker-compose.yaml  nginx.conf  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci-cd.yaml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  utils.test.ts  utils.ts
app/blog/: page.tsx
app/components/: footer.tsx  gallery.tsx  mdx.test.tsx  mdx.tsx  nav.test.tsx  nav.tsx
app/photo-video/: page.tsx
app/playground/: page.tsx
app/service/: blogService.test.ts  blogService.ts
app/template-ui/: page.tsx
backend/: .dockerignore  Dockerfile  check.sh  generate-media-json.py  photo_blog.py  prestart.sh  pyproject.toml  requirements.txt  storage.py
backend/alembic/: env.py
backend/alembic/versions/: 37219dd17c71_create_user_table.py  6c57cb6c9db8_create_blog_posts_table.py  749ff6f42456_add_date_column_to_blog_posts.py
backend/app/: main.py
backend/app/config/: cors_config.py  database_config.py  security_config.py  storage_config.py  user_config.py
backend/app/controller/: deps.py  main.py
backend/app/controller/routes/: blog.py  login.py  user.py  users.py
backend/app/model/: blog_post.py  security.py  user.py
backend/app/repository/: blog_repository.py  user_repositoy.py
backend/app/service/: __init__.py  blog_service.py  database_service.py  dummy_service.py  security_service.py  storage_service.py  user_service.py
backend/blog-post/: setup-server-vps.mdx
backend/script/: generate-mdx.py  generate-media-json.py  initial_data.py  photo_blog.py
conf/nginx/: backend.nginx.conf  dev.backend.nginx.conf  dev.frontend.nginx.conf  prod.frontend.nginx.conf  prod.nginx.conf  prod.storage.console.nginx.conf  prod.storage.nginx.conf
cypress/e2e/: spec.cy.ts
frontend/: eslint.config.js  index.html  openapi-ts.config.ts  openapi.json  package-lock.json  package.json
frontend/public/: blog-post.json
frontend/src/: global.d.ts  index.css  main.tsx  routeTree.gen.ts
public/: gallery.json
script/: prestart.sh
src/: index.css  routeTree.gen.ts
(+42 files in other folders)
