[project]
name = "personal-website"
version = "0.1.0"
description = ""
authors = [
    {name = "geniungamartya@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-frontmatter (>=1.1.0,<2.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "minio (>=7.2.15,<8.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.ruff.lint]
extend-select = ["I"]
